kubernetes/patient-service/namespace.yaml
# kubernetes/patient-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hospital-system
